<resources>
    <string name="app_name">Design Space Studio</string>
    <string name="get_pro">Get Pro</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="cut_file">Cut File</string>

    <string name="stickers">Stickers</string>
    <string name="svg">SVG</string>
    <string name="mono">Monogram</string>
    <string name="water_color">WaterColor</string>
    <string name="shapes">Shapes</string>

    <string name="image">image</string>
    <string name="customize">Customize</string>
    <string name="save">Save</string>
    <string name="are_you_sure">Are you sure you want to exit the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="setting">Setting</string>

    <string name="something_went_wrong">Something went wrong! Please try again.</string>

    <string name="purchase_start">Purchase</string>
    <string name="subscription_start">Subscription Start</string>
    <string name="basic">Basic</string>
    <string name="continue_with_free_plan">Continue With Free Plan</string>
    <string name="no_commitment">No Commitment. Cancel anytime.</string>
    <string name="_3_days_trial">Try 3 Days Free Trial</string>
    <string name="then">Then</string>
    <string name="year_after">/Year After Trial</string>
    <string name="prices">Prices</string>
    <string name="weekly">Weekly</string>
    <string name="month">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="life_time">Lifetime</string>
    <string name="_50_noff">50%\nOFF</string>
    <string name="_82_noff">82%\nOFF</string>
    <string name="already_subscribed">Already Subscribed</string>
    <string name="internet_not_connected">Internet not connected.</string>

    <string name="choose_one">Choose One</string>

    <string name="next">Next</string>
    <string name="images">Images</string>
    <string name="opacity">Opacity</string>
    <string name="size">Size</string>
    <string name="rotation">Rotation</string>
    <string name="loading">Loading</string>
    <string name="saveImg">Save</string>
</resources>